# VimNote

./: .gitignore  Cargo.toml  README.md  app-resources.rc  specification.md
src/: app.rs  main.rs  main.rs.bak  modes.rs  operations.rs
src/editor/: mod.rs  simple_editor.rs
